--- a/RentalWebsite/Styles/Stylesheet.css
+++ b/RentalWebsite/Styles/Stylesheet.css
@@ -64,7 +64,7 @@ footer
 {
     height: 80px;
     border: 3px solid #E3E3E3;
-    margin-top: 20px;
+    margin-top: 10px;
     text-shadow: 0.1em 0.1em #333;
     background-image: url(../Images/car_background.jpg);
 }
@@ -76,7 +76,7 @@ footer
 
 #nav ul
 {
-    margin: 0;
+    margin: 10px;
     padding: 0;
     width: auto;
     display: none;
@@ -87,9 +87,10 @@ footer
     font-size: 24px;
     float: left;
     position: relative;
-    width: 110px;
+    width: 120px;
     height: 50px;
     padding: 4px;
+    margin: 10px;
 }
 
 #nav a:link, nav a:active, nav a:visited
@@ -121,3 +122,4 @@ footer
     margin: 0px 0 10px 10px;
     padding: 10px;
 }
+
